Error Mitigation/MagiCoder/Data/java_lang_reflect/java_lang_reflectOutputResult.txt
Sample: AccessibleObject_2
----------------------------------------------------------------
stdout:
Value of myField: Hello, world!

================================================================

Sample: AccessibleObject_3
----------------------------------------------------------------
stdout:
Hello

================================================================

Sample: Array_1
----------------------------------------------------------------
stdout:
Hello
World
Java

================================================================

Sample: Array_2
----------------------------------------------------------------
stdout:
Length of the array: 5

================================================================

Sample: Array_3
----------------------------------------------------------------
stdout:
World

================================================================

Sample: Array_4
----------------------------------------------------------------
stdout:
Hello World ! 
================================================================

Sample: Array_5
----------------------------------------------------------------
stdout:
Hello World ! 
================================================================

Sample: Constructor_2
----------------------------------------------------------------
stdout:
Hello

================================================================

Sample: Executable_10
----------------------------------------------------------------
stdout:
class java.lang.Exception

================================================================

Sample: Method_1
----------------------------------------------------------------
stdout:
[Hello]

================================================================

Sample: Method_2
----------------------------------------------------------------
stdout:
boolean

================================================================

Sample: Method_3
----------------------------------------------------------------
stdout:
java.util.ArrayList

================================================================

Sample: Method_4
----------------------------------------------------------------
stdout:
getName

================================================================

Sample: Method_5
----------------------------------------------------------------
stdout:
java.lang.Object

================================================================

Sample: Modifier_2
----------------------------------------------------------------
stdout:
Is the modifier public? true

================================================================

Sample: Modifier_3
----------------------------------------------------------------
stdout:
Is the modifier protected? true

================================================================

Sample: Modifier_4
----------------------------------------------------------------
stdout:
false

================================================================

Sample: Modifier_5
----------------------------------------------------------------
stdout:
Is the modifier abstract? true

================================================================

Sample: Modifier_6
----------------------------------------------------------------
stdout:
Is the modifier 'public' static? true

================================================================

Sample: Modifier_7
----------------------------------------------------------------
stdout:
false

================================================================

Sample: Modifier_8
----------------------------------------------------------------
stdout:
false

================================================================

Sample: Modifier_9
----------------------------------------------------------------
stdout:
Is the modifier volatile? false

================================================================

Sample: Modifier_10
----------------------------------------------------------------
stdout:
Is the modifier transient? false

================================================================

Sample: Modifier_11
----------------------------------------------------------------
stdout:
Is native: false

================================================================

Sample: Modifier_12
----------------------------------------------------------------
stdout:
Is the modifier an interface? false

================================================================

Sample: Modifier_13
----------------------------------------------------------------
output:
./Data/java_lang_reflect/javaFiles/Modifier_13.java:6: error: not a statement
        boolean strictfp = Modifier.isStrict(mod);
        ^
./Data/java_lang_reflect/javaFiles/Modifier_13.java:6: error: ';' expected
        boolean strictfp = Modifier.isStrict(mod);
               ^
./Data/java_lang_reflect/javaFiles/Modifier_13.java:6: error: class, interface, enum, or record expected
        boolean strictfp = Modifier.isStrict(mod);
                         ^
./Data/java_lang_reflect/javaFiles/Modifier_13.java:7: error: illegal start of expression
        System.out.println("Is strictfp modifier present? " + strictfp);
                                                              ^
./Data/java_lang_reflect/javaFiles/Modifier_13.java:7: error: class, interface, enum, or record expected
        System.out.println("Is strictfp modifier present? " + strictfp);
                                                                      ^
5 errors


================================================================

Sample: Parameter_2
----------------------------------------------------------------
stdout:
Parameter: arg0
Annotations: []

================================================================

Sample: Parameter_4
----------------------------------------------------------------
stdout:
arg0

================================================================

Sample: Parameter_5
----------------------------------------------------------------
================================================================

Sample: Parameter_6
----------------------------------------------------------------
stdout:
Parameter type: class java.lang.String

================================================================

Sample: Parameter_7
----------------------------------------------------------------
stdout:
Parameter name: arg0
Is synthetic: false

================================================================

Sample: Parameter_8
----------------------------------------------------------------
stderr:
Exception in thread "main" java.lang.NoSuchMethodException: Parameter_8.isVarArgsMethod(int,java.lang.String)
	at java.base/java.lang.Class.getMethod(Class.java:2227)
	at Parameter_8.main(Parameter_8.java:6)

================================================================

Sample: Parameter_10
----------------------------------------------------------------
output:
./Data/java_lang_reflect/javaFiles/Parameter_10.java:8: error: cannot find symbol
            Method method = Parameter_10.class.getMethod("add", String.class);
            ^
  symbol:   class Method
  location: class Parameter_10
1 error


================================================================

Sample: Parameter_12
----------------------------------------------------------------
stdout:
Parameter: arg0

================================================================

Sample: Parameter_15
----------------------------------------------------------------
stdout:
Parameter name: arg0
Is synthetic: false

================================================================

Sample: Parameter_16
----------------------------------------------------------------
stderr:
Exception in thread "main" java.lang.NoSuchMethodException: Parameter_16.isVarArgsMethod(int,java.lang.String)
	at java.base/java.lang.Class.getMethod(Class.java:2227)
	at Parameter_16.main(Parameter_16.java:6)

================================================================

Sample: Parameter_18
----------------------------------------------------------------
output:
./Data/java_lang_reflect/javaFiles/Parameter_18.java:8: error: cannot find symbol
            Method method = Parameter_18.class.getMethod("add", String.class);
            ^
  symbol:   class Method
  location: class Parameter_18
1 error


================================================================

Sample: Parameter_20
----------------------------------------------------------------
stdout:
Parameter: arg0

================================================================

Sample: Proxy_1
----------------------------------------------------------------
stdout:
Method doSomething invoked

================================================================

